# sphinx-tagtoctree

./: .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pythonpublish.yml
example/: make.bat
example/source/: conf.py  index.rst  page1.rst  page2.rst  page3.rst  page4.rst  page5.rst
example/source/subpages/: banana.rst  page5.rst  page6.rst  sales.rst
example/source/tags-with-hyphens/: product-special.rst  sales-special.rst
src/: setup.cfg  setup.py
src/sphinx_tagtoctree/: __init__.py
