
[metadata]
name = sphinx-tagtoctree
author = Half Scheidl
author_email= noreply@hscheidl.com
description = Sphinx table-of-contents with super powers
long_description = file: README.rst
url = https://github.com/haschdl/sphinx-tagtoctree

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    sphinx
    boolean.py


[options.package_data]
* = *.md




