
[metadata]
name = sphinx-tagtoctree
author = Half Scheidl
author_email= noreply@hscheidl.com
description = Sphinx table-of-contents with super powers
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/haschdl/sphinx-tagtoctree

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    sphinx
    boolean.py

[options.packages.find]
where=src

[options.package_data]
* = *.md




