
[metadata]
name = sphinx-tagtoctree
version = $VERSION$

[options]
packages = find:
include_package_data = True
install_requires =
    sphinx
    boolean.py

[options.package_data]
* = *.md

[metadata.author]
name = Half Scheidl
email = noreply@hscheidl.com

[metadata.url]
url = https://github.com/haschdl/sphinx-tagtoctree

[metadata.description]
description = Sphinx table-of-contents with super powers

[metadata.long_description]
file = README.md
content_type = text/markdown

[options.classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent